--- a/css/main.css
+++ b/css/main.css
@@ -847,7 +847,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-link:hover .project__overlay {
+.project__link:hover .project__overlay {
   transform: translateY(0);
 }
 /*# sourceMappingURL=main.css.map */
