--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -56,7 +56,7 @@
   height: 100%;
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .project-link:hover & {
+  .project__link:hover & {
     transform: translateY(0);
   }
 }
